--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ reqwest = { version = "0.11", features = ["blocking"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde-xml-rs = "0.5"
+quick-xml = { version = "0.31.0", features = ["serialize"] }
 anyhow = "1.0.75"
 async-trait = "0.1.80"
 url = "2.5.0"
 geojson = "0.24.1"
+regex = "1.10.4"
